feature: confir ticket payment
