# docs/swagger.json
@@ -464,7 +464,78 @@
                 }
             }
         },
-        "/customer/{customerId}/ticket/{ticketId}": {
+        "/customer/{customerId}/tickets": {
+            "get": {
+                "description": "Get all payments",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Get Payments",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Customer ID",
+                        "name": "customerId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.TicketsResponse"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create Ticket by shedule",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Create Ticket",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Customer ID",
+                        "name": "customerId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Schedule Detail",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ScheduleTicket"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.TicketResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/customer/{customerId}/tickets/{ticketId}": {
             "get": {
                 "description": "Get payment",
                 "consumes": [
@@ -503,7 +574,7 @@
                 }
             }
         },
-        "/customer/{customerId}/ticket/{ticketId}/payment": {
+        "/customer/{customerId}/tickets/{ticketId}/payment": {
             "post": {
                 "description": "Confirm payment with payment_id.",
                 "consumes": [
@@ -537,38 +608,6 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.TicketResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/customer/{customerId}/tickets": {
-            "get": {
-                "description": "Get all payments",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Customer"
-                ],
-                "summary": "Get Payments",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "Customer ID",
-                        "name": "customerId",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.TicketsResponse"
                         }
                     }
                 }
@@ -857,6 +896,39 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create a schedule for a movie",
+                "tags": [
+                    "Admin"
+                ],
+                "summary": "Create a movie schedule",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Movie ID",
+                        "name": "movieId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Schedule details",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Schedule"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.ScheduleResponse"
+                        }
+                    }
+                }
             }
         },
         "/movies/{movieId}/schedules/{scheduleId}": {
@@ -891,46 +963,6 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.ScheduleResponse"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create a schedule for a movie",
-                "tags": [
-                    "Admin"
-                ],
-                "summary": "Create a movie schedule",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Movie ID",
-                        "name": "movieId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Schedule ID",
-                        "name": "scheduleId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Schedule details",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Schedule"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/models.ScheduleResponse"
                         }
@@ -1046,6 +1078,23 @@
                 }
             }
         },
+        "models.BranchTheatre": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "theatre": {
+                    "$ref": "#/definitions/models.Theatre"
+                }
+            }
+        },
         "models.BranchesResponse": {
             "type": "object",
             "properties": {
@@ -1130,7 +1179,7 @@
                     "type": "string"
                 },
                 "title": {
-                    "type": "integer"
+                    "type": "string"
                 }
             }
         },
@@ -1169,7 +1218,7 @@
             "type": "object",
             "properties": {
                 "amount": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "id": {
                     "type": "integer"
@@ -1182,14 +1231,14 @@
         "models.PaymentStatus": {
             "type": "string",
             "enum": [
-                "Pending",
-                "Completed",
-                "Expired"
+                "pending",
+                "completed",
+                "failed"
             ],
             "x-enum-varnames": [
                 "Pending",
                 "Completed",
-                "Expired"
+                "Failed"
             ]
         },
         "models.Response": {
@@ -1207,7 +1256,7 @@
             "type": "object",
             "properties": {
                 "branch": {
-                    "$ref": "#/definitions/models.Branch"
+                    "$ref": "#/definitions/models.BranchTheatre"
                 },
                 "id": {
                     "type": "integer"
@@ -1216,7 +1265,7 @@
                     "$ref": "#/definitions/models.Movie"
                 },
                 "price": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "seats": {
                     "type": "array",
@@ -1240,6 +1289,29 @@
                 },
                 "status": {
                     "type": "integer"
+                }
+            }
+        },
+        "models.ScheduleTicket": {
+            "type": "object",
+            "properties": {
+                "branch": {
+                    "$ref": "#/definitions/models.BranchTheatre"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "movie": {
+                    "$ref": "#/definitions/models.Movie"
+                },
+                "price": {
+                    "type": "integer"
+                },
+                "seat": {
+                    "$ref": "#/definitions/models.Seat"
+                },
+                "showtime": {
+                    "type": "string"
                 }
             }
         },
@@ -1298,7 +1370,7 @@
                     "$ref": "#/definitions/models.Payment"
                 },
                 "schedule": {
-                    "$ref": "#/definitions/models.Schedule"
+                    "$ref": "#/definitions/models.ScheduleTicket"
                 },
                 "seat": {
                     "$ref": "#/definitions/models.Seat"
