# routes/routes.go
@@ -31,6 +31,7 @@ func SetupRouter() *gin.Engine {
 				customerId := customer.Group("/:customerId")
 				{
 					customerId.POST("/tickets", controller.CreateTicket)
+					customerId.POST("/tickets/:ticketId/payment", controller.ConfirmPayment)
 				}
 			}
 
